# CapsLockPusher

./: CapsLockPusher.csproj  Program.cs  README.txt  app.manifest  build.bat  package.json
.github/workflows/: build-tauri-windows.yml  build-windows.yml
CapsLockPusher_Project/: Program.cs  build-small.bat
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
